# tablet_wallpaper

./: CMakeLists.txt
asset/: app.manifest  app.rc
lib/: libjj
lib/GraphicsMagick/include/Magick++/: Drawable.h  Image.h  Include.h  STL.h
lib/GraphicsMagick/include/magick/: api.h  cdl.h  common.h  delegate.h  enum_strings.h  image.h  log.h  magick_types.h  profile.h  resource.h  signature.h  symbols.h  utility.h  version.h
lib/GraphicsMagick/include/wand/: magick_wand.h  wand_symbols.h
lib/GraphicsMagick/lib/: libGraphicsMagick++.la  libGraphicsMagick.la  libGraphicsMagickWand.la
lib/GraphicsMagick/lib/GraphicsMagick-1.3.40/config/: delegates.mgk
lib/GraphicsMagick/lib/pkgconfig/: GraphicsMagick++.pc  GraphicsMagick.pc  GraphicsMagickWand.pc
src/: config.json  main.c
